# y_dbgtemplate

./: .clang-format  .gitignore  Application.cpp  CMakeLists.txt  CMakeSettings.json  main.cpp  vcpkg.json
include/ydb/: Application.h
